# hs-op

./: CHANGELOG.md  README.markdown  format.sh  op.cabal
.github/workflows/: haskell-ci.yml
src/Control/: Op.hs
test/: DocTests.hs
