cabal-version:       2.4
name:                op
version:             0.4.0.1
synopsis:            Common operators encouraging large-scale easy reading
description:
 Op provides operators for writing easier-to-read Haskell. It provides new
 operators with a consistent "look and feel" including fixity direction and
 precedence, resulting in easier- and quicker-to-read code especially when used
 on long chains of expressions.
homepage:            https://github.com/infinity0/hs-op
bug-reports:         https://github.com/infinity0/hs-op/issues
license:             Apache-2.0
license-file:        LICENSE
author:              Ximin Luo
maintainer:          infinity0@pwned.gg
copyright:           (c) 2019-2021 by Ximin Luo
category:            Combinators, Control, Functions, Utility
extra-source-files:  CHANGELOG.md
tested-with:
  GHC ==7.4.2
   || ==7.6.3
   || ==7.8.4
   || ==7.10.3
   || ==8.0.2
   || ==8.2.2
   || ==8.4.4
   || ==8.6.5
   || ==8.8.3
   || ==8.10.4
   || ==9.0.1

library
  exposed-modules:     Control.Op
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.5.0.0 && <5
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite doctests
  build-depends:
      base >=4.5.0.0
    , doctest
    , containers
  hs-source-dirs: test
  type: exitcode-stdio-1.0
  main-is: DocTests.hs
  default-language:    Haskell2010
